namespace ArchQ.Core.Entities;

public class TenantSettings
{
    public int MaxUsers { get; set; } = 50;
    public int MaxAdrs { get; set; } = 1000;
}
